# android_vendor_qcom_opensource_omx_mm-audio

./: Android.mk  Makefile
8k/: Android.mk
8k/adec-aac/: Android.mk  Makefile  adec-aac.mk
8k/adec-aac/inc/: adec_svr.h  omx_aac_adec.h
8k/adec-aac/src/: adec_svr.c
8k/adec-aac/test/: omx_aac_dec_test.c
8k/adec-mp3/: Makefile  adec-mp3.mk
8k/adec-mp3/inc/: adec_svr.h
8k/adec-mp3/src/: adec_svr.c  omx_mp3_adec.cpp
8k/aenc-aac/: Android.mk  aenc-aac.mk
8k/aenc-aac/inc/: Map.h  aenc_svr.h  omx_aac_aenc.h
8k/aenc-aac/src/: aenc_svr.c  omx_aac_aenc.cpp
8k/aenc-aac/test/: omx_aac_enc_test.c
adec-aac/: Android.mk
adec-aac/qdsp6/: Android.mk  Makefile  Makefile.am
adec-aac/qdsp6/src/: omx_aac_adec.cpp
adec-aac/qdsp6/test/: omx_aac_dec_test.c
adec-aac/sw/: Android.mk
adec-aac/sw/test/: omx_aac_dec_test.c
adec-amr/sw/: Android.mk
adec-amr/sw/test/: omx_amr_dec_test.c
adec-amrwb/sw/: Android.mk
adec-amrwb/sw/test/: omx_amrwb_dec_test.c
adec-mp3/: Android.mk
adec-mp3/qdsp6/: Android.mk  Makefile.am
adec-mp3/qdsp6/inc/: omx_mp3_adec.h
adec-mp3/qdsp6/src/: omx_mp3_adec.cpp
adec-mp3/qdsp6/test/: omx_mp3_dec_test.c
adec-mp3/sw/: Android.mk
adec-mp3/sw/test/: omx_mp3_dec_test.c
aenc-aac/: Android.mk
aenc-aac/qdsp6/: Android.mk
aenc-aac/qdsp6/inc/: omx_aac_aenc.h
aenc-aac/qdsp6/src/: aenc_svr.c  omx_aac_aenc.cpp
aenc-aac/qdsp6/test/: omx_aac_enc_test.c
aenc-amrnb/: Android.mk  Makefile
aenc-amrnb/qdsp6/: Android.mk  Makefile
aenc-amrnb/qdsp6/inc/: omx_amr_aenc.h
aenc-amrnb/qdsp6/src/: aenc_svr.c  omx_amr_aenc.cpp
aenc-amrnb/qdsp6/test/: omx_amr_enc_test.c
aenc-evrc/: Android.mk
aenc-evrc/qdsp6/: Android.mk  Makefile
aenc-evrc/qdsp6/inc/: omx_evrc_aenc.h
aenc-evrc/qdsp6/src/: aenc_svr.c  omx_evrc_aenc.cpp
aenc-evrc/qdsp6/test/: omx_evrc_enc_test.c
aenc-qcelp13/: Android.mk
aenc-qcelp13/qdsp6/: Android.mk  Makefile
aenc-qcelp13/qdsp6/inc/: omx_qcelp13_aenc.h
aenc-qcelp13/qdsp6/src/: aenc_svr.c  omx_qcelp13_aenc.cpp
(+1 files in other folders)
